--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -31,3 +31,34 @@ h1{
     font-weight: 400;
     text-decoration: line-through;
 }
+
+/* General */
+#root{
+    background-color: var(--background-color);
+    height: 100vh;
+}
+
+.main{
+    padding: 10vh 0;
+}
+
+.container{
+    max-width: 1536px;
+    margin: 0 auto;
+}
+
+.shadow{
+    box-shadow: 4px 12px 24px rgba(0, 0, 0, 0.25);
+}
+
+/* Todo box */
+.todo-box{
+    color: white;
+    background-color: var(--surface-color);
+    border-radius: 32px;
+    padding: 80px 160px;
+}
+
+.title-todo-box{
+    margin-bottom: 64px;
+}
