--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -6,27 +6,31 @@
 /* Font */
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap');
 
-body {
+/* body {
     font-family: 'Inter', sans-serif;
-}
+} */
 
 /* Typography */
 h1{
+    font-family: 'Inter', sans-serif;
     font-size: 54px;
     font-weight: bold;
 }
 
 .label{
+    font-family: 'Inter', sans-serif;
     font-size: 17px;
     font-weight: 400;
 }
 
 .label-medium{
+    font-family: 'Inter', sans-serif;
     font-size: 17px;
     font-weight: 500;
 }
 
 .label-strikethrough{
+    font-family: 'Inter', sans-serif;
     font-size: 17px;
     font-weight: 400;
     text-decoration: line-through;
@@ -57,8 +61,33 @@ h1{
     background-color: var(--surface-color);
     border-radius: 32px;
     padding: 80px 160px;
+    margin-bottom: 24px;
 }
 
 .title-todo-box{
     margin-bottom: 64px;
+}
+
+/* New-item-box */
+.new-item-box{
+    text-align: center;
+}
+
+.button-new-item{
+    background-color: var(--primary-color);
+    border: none;
+    border-radius: 32px;
+    padding: 16px 32px;
+    cursor: pointer;
+}
+
+.flex-button{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 24px;
+}
+
+.icon-button{
+    width: 40px;
 }
