--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -10,6 +10,10 @@
     font-family: 'Inter', sans-serif;
 } */
 
+/* * {
+    font-family: 'Inter', sans-serif;
+} */
+
 /* Typography */
 h1{
     font-family: 'Inter', sans-serif;
@@ -55,6 +59,10 @@ h1{
     box-shadow: 4px 12px 24px rgba(0, 0, 0, 0.25);
 }
 
+.hidden{
+    display: none;
+}
+
 /* Todo box */
 .todo-box{
     color: white;
@@ -74,6 +82,7 @@ h1{
 }
 
 .button-new-item{
+    color: var(--text-color);
     background-color: var(--primary-color);
     border: none;
     border-radius: 32px;
