--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -1,10 +1,10 @@
 /* Variables */
-@import url('./variables.css');
+@import url("./variables.css");
 /* Reset rules */
-@import url('./reset.css');
+@import url("./reset.css");
 
 /* Font */
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap");
 
 /* body {
     font-family: 'Inter', sans-serif;
@@ -15,88 +15,129 @@
 } */
 
 /* Typography */
-h1{
-    font-family: 'Inter', sans-serif;
-    font-size: 54px;
-    font-weight: bold;
+h1 {
+  font-family: "Inter", sans-serif;
+  font-size: 54px;
+  font-weight: bold;
 }
 
-.label{
-    font-family: 'Inter', sans-serif;
-    font-size: 17px;
-    font-weight: 400;
+.label {
+  font-family: "Inter", sans-serif;
+  font-size: 17px;
+  font-weight: 400;
 }
 
-.label-medium{
-    font-family: 'Inter', sans-serif;
-    font-size: 17px;
-    font-weight: 500;
+.label-medium {
+  font-family: "Inter", sans-serif;
+  font-size: 17px;
+  font-weight: 500;
 }
 
-.label-strikethrough{
-    font-family: 'Inter', sans-serif;
-    font-size: 17px;
-    font-weight: 400;
-    text-decoration: line-through;
+.label-strikethrough {
+  font-family: "Inter", sans-serif;
+  font-size: 17px;
+  font-weight: 400;
+  text-decoration: line-through;
 }
 
 /* General */
-#root{
-    background-color: var(--background-color);
-    height: 100vh;
+#root {
+  background-color: var(--background-color);
 }
 
-.main{
-    padding: 10vh 0;
+.main {
+  height: 100vh;
+  padding: 10vh 0;
+  overflow: hidden;
 }
 
-.container{
-    max-width: 1536px;
-    margin: 0 auto;
+.container {
+  max-width: 1536px;
+  margin: 0 auto;
 }
 
-.shadow{
-    box-shadow: 4px 12px 24px rgba(0, 0, 0, 0.25);
+.shadow {
+  box-shadow: 4px 12px 24px rgba(0, 0, 0, 0.25);
 }
 
-.hidden{
-    display: none;
+.hidden {
+  display: none;
+}
+
+/* Scrollbar */
+
+/* width */
+::-webkit-scrollbar {
+  width: 2px;
+}
+
+/* Scrollbar line */
+::-webkit-scrollbar-thumb {
+    background: white;
+    border-radius: 10px;
+  }
+
+/* Track */
+::-webkit-scrollbar-track {
+  background-color: var(--background-color);
+  border-radius: 10px;
 }
 
 /* Todo box */
-.todo-box{
-    color: white;
-    background-color: var(--surface-color);
-    border-radius: 32px;
-    padding: 80px 160px;
-    margin-bottom: 24px;
+.todo-box {
+  color: white;
+  background-color: var(--surface-color);
+  border-radius: 32px;
+  padding: 80px 160px;
+  margin-bottom: 24px;
 }
 
-.title-todo-box{
-    margin-bottom: 64px;
+.todo-card {
+  max-height: 55vh;
+  overflow-y: scroll;
+}
+
+.title-todo-box {
+  margin-bottom: 64px;
+}
+
+.list-item {
+  display: flex;
+  align-items: center;
+  margin-bottom: 40px;
+}
+
+.trash-icon {
+  width: 40px;
+  margin-right: 40px;
+}
+
+.checkbox-icon {
+  width: 40px;
+  margin-right: 24px;
 }
 
 /* New-item-box */
-.new-item-box{
-    text-align: center;
+.new-item-box {
+  text-align: center;
 }
 
-.button-new-item{
-    color: var(--text-color);
-    background-color: var(--primary-color);
-    border: none;
-    border-radius: 32px;
-    padding: 16px 32px;
-    cursor: pointer;
+.button-new-item {
+  color: var(--text-color);
+  background-color: var(--primary-color);
+  border: none;
+  border-radius: 32px;
+  padding: 16px 32px;
+  cursor: pointer;
 }
 
-.flex-button{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 24px;
+.flex-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 24px;
 }
 
-.icon-button{
-    width: 40px;
+.icon-button {
+  width: 40px;
 }
