--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -6,14 +6,6 @@
 /* Font */
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap");
 
-/* body {
-    font-family: 'Inter', sans-serif;
-} */
-
-/* * {
-    font-family: 'Inter', sans-serif;
-} */
-
 /* Typography */
 h1 {
   font-family: "Inter", sans-serif;
@@ -47,13 +39,13 @@ h1 {
 
 .main {
   height: 100vh;
-  padding: 10vh 0;
   overflow: hidden;
 }
 
 .container {
-  max-width: 1536px;
-  margin: 0 auto;
+  /* max-width: 1280px;
+  margin: 0 auto; */
+  padding: 12vh 7vw;
 }
 
 .shadow {
